2006-12-12  Mike Cvet  <mcvet@redhat.com>

	* SourceWindow.java (populateStackBrowser): Catch more null 
	StackFrames. Assume some stacktrace function names could be null
	even if the objects aren't. Fixes #3696.

2006-12-07  Mike Cvet  <mcvet@redhat.com>

	* SourceBuffer.java (SourceBuffer): If the incoming StackFrame is 
	null, do a minimum initialization and print an error.
	* SourceWindow.java (populateStackBrowser): Do a bare minimum
	initialization of the SourceWindow if the stack is null.
	* CurrentStackView.java (buildTree): Taking #3677 into account, check
	to see if the entire stack trace for all threads is null, if so dump
	an error into the StackView.

2006-12-06  Andrew Cagney  <cagney@redhat.com>

	* SourceWindow.java: Remove @author.
	* tags/Tagset.java: Ditto.
	
	* tags/Tag.java: Add copyright.
	* tags/Tagset.java: Ditto.
	* tags/TagsetManager.java: Ditto.

2006-12-06  Mike Cvet  <mcvet@redhat.com>

	* InlineSourceView.java: Removed @author tag.
	* SourceBuffer.java: Ditto.
	* SourceWindowFactory.java: Ditto. 
	* InlineBuffer.java: Ditto.
	* SourceView.java: Ditto.

2006-12-06  Phil Muldoon  <pmuldoon@redhat.com>

	* tags/TagsetManager.java: Remove autogenerated @author tag.

2006-12-06  Mike Cvet  <mcvet@redhat.com>

	* VariableWatchView.java (variables): Added.
	(view): Refactored from SourceWindow parent.
	(VariableWatchView): Removed SourceWindow parameter.
	(setView): Added.
	(addTrace): Append new Variable to variables Vector.
	(removeTrace): Remove Variable to variables Vector.
	(refreshList): Added. Clears the model and re-parses the variables'
	values from SymTab. Addresses #1717.
	* SourceView.java (removeVar): Use Variable.getText() rather than 
	toString().
	(refreshVars): Calls buffer to refresh variable list.
	* SourceBuffer.java (refreshVars): Iterates through the incoming Vector
	and re-parses values for contained Variables.
	* SourceWindow.java (populateStackBrowser): Set VariableWatchView's 